lab5/test/96-unterminated.oc.valgrind
==3936== Memcheck, a memory error detector
==3936== Copyright (C) 2002-2017, and GNU GPL'd, by Julian Seward et al.
==3936== Using Valgrind-3.13.0 and LibVEX; rerun with -h for copyright info
==3936== Command: ../oc 96-unterminated.oc
==3936== 
96-unterminated.oc:6:15: warning: missing terminating " character
    string s = "abc;
               ^
96-unterminated.oc:7:13: warning: missing terminating ' character
    char c = 'a;
             ^
96-unterminated.oc:8:8: warning: missing terminating " character
    s = "abcd\";
        ^
96-unterminated.oc:9:8: warning: missing terminating " character
    s = "abc|\
        ^
ÀG¸:5.15: invalid token ("\*/")
ÀG¸:5.20: syntax error, unexpected ';'
ÀG¸:6.15: invalid token ("abc;)
ÀG¸:7.9: syntax error, unexpected TOK_IDENT
ÀG¸:7.13: invalid token ('a;)
ÀG¸:8.8: invalid token ("abcd\";)
ÀG¸:9.8: invalid token ("abc|   ;)
ÀG¸:11.8: invalid token (23foobar)
==3936== 
==3936== HEAP SUMMARY:
==3936==     in use at exit: 0 bytes in 0 blocks
==3936==   total heap usage: 82 allocs, 82 frees, 113,223 bytes allocated
==3936== 
==3936== All heap blocks were freed -- no leaks are possible
==3936== 
==3936== For counts of detected and suppressed errors, rerun with: -v
==3936== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)
